repair align and dropdown

--- a/src/app/views/setup/setup.component.scss
+++ b/src/app/views/setup/setup.component.scss
@@ -98,7 +98,7 @@
             font-weight: bold;
             outline: none;
             .roundDropDown {
-                padding-right: 69%;
+                // padding-right: 69%;
                 padding-top: 2%;
                 padding-bottom: 3%;
             }
@@ -393,7 +393,7 @@
 .modal-body {
     text-align: center !important;
     color: #fff !important;
-    padding-top: 4em !important;
+    // padding-top: 4em !important;
     label {
         font-weight: bold !important;
         letter-spacing: 0.5px !important;
